Changelog
=========


1.2 (xxxx-xx-xx)
----------------

- eggificiation [aclark]

- Bug fix: when you select an item on the left (the options) and do not move it
  to the right (the selected items) then when saving this would happen anyway.
  Fixes http://plone.org/products/orderablereferencefield/issues/1
  [Giovanni Toffoli]

- Improve addable support. [Giovanni Toffoli]

- fixed import failure [timte]

- added support for relations and made the field class backward-compatible
  (means that switching from referencefield to orderablereferencefield does not
  break existing data) [zworkb]


1.1 (10-03-2007)
---------------------------
- Added the javascript to ResourceRegistries, and created orderablerefence.css
  which allows you to change the look and feel without changing the template.
  [jladage]

- Added two example types for testing purposes, Now that we have a these we can
  start writing testbrower functional tests. [jladage]

- Moved the style tags to orderablereference.css and added ids and class to the
  widget. [mirella]

- Added missing <ul> tag in the view marco of the widget. [jladage]


1.0 (25-05-2006)
----------------
- Modified the widget and based it on AT's inandout widget for better manipulation.
  [ender]

- Fixed some bugs in the js code (generated errors when moving up/down) [ender]
