@@ -1,14 +1,6 @@
 PROJECTNAME = 'OrderableReferenceField'
 
 
-STYLESHEETS = (
-    {'id': 'orderablereference.css', 'media': 'screen', 'rendering': 'import'},
-        )
-
-JAVASCRIPTS = (
-    {'id': 'orderablereference.js',},
-        )
-
 # Two demo types are avaibable, these are used for testing purpose and are
 # disabled by default.
 
